<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">3ich Healthy</string>
    <string name="sign_up_for_free_now">S\'INSCRIRE GRATUITEMENT</string>
    <string name="Cree_votre_compte">Crée votre compte</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="sign_up">S\'INSCRIRE</string>
    <string name="or">OU</string>
    <string name="bienvenue">Bienvenue!</string>
    <string name="sign_in">SE CONNECTER</string>
    <string name="prePersoText">commençons à personnaliser 3ich Healthy pour vos objectifs</string>
    <string name="continuer">Continuer</string>
    <string name="c_est_quoi_votre_objectif">C’est quoi votre objectif ?</string>
    <string name="suivant">SUIVANT</string>
    <string name="perdre_du_poids">Perdre du poids</string>
    <string name="gagner_du_poids">Gagner du poids</string>
    <string name="maintenir_mon_poids">Maintenir mon poids</string>
    <string name="question_sexe">Veuiller selectionner votre sexe que nous devons utiliser pour calculer vos calories:</string>
    <string name="homme">homme</string>
    <string name="femme">femme</string>
    <string name="quel_est_votre_age">Quel est votre age ?</string>
    <string name="votre_age">Votre age</string>
    <string name="vous_avez_d_ja_un_compte">Vous avez déja un compte? se connecter</string>
    <string name="quel_est_votre_niveau_d_activit_de_base">Quel est votre niveau d’activité de base ?</string>
    <string name="pas_tr_s_actif">Pas trés actif</string>
    <string name="actif">Actif</string>
    <string name="tr_s_actif">Trés actif</string>
    <string name="_0_ou_2_journ_e_d_exercices_par_semaine">(0 ou 2 journées d’exercices par semaine)</string>
    <string name="_3_jours_d_exerices_par_semaine">(3 jours d’exerices par semaine)</string>
    <string name="plus_que_3_jours_d_exercices_par_semaine">(plus que 3 jours d’exercices par semaine)</string>
    <string name="quelle_est_votre_taille">Quelle est votre taille ?</string>
    <string name="combien_pesez_vous">Combien pesez-vous ?</string>
    <string name="votre_taille">Votre taille</string>
    <string name="_0">0</string>
    <string name="lbs">Lbs</string>
    <string name="kg">Kg</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte? S\'inscrire</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="Acceuil">Acceuil</string>
    <string name="plus">Plus</string>
    <string name="stat">Stat</string>
    <string name="journal">Journal</string>
    <string name="shortcut_options">shortcut options</string>
    <string name="weight_adding_shortcut">weight adding shortcut</string>
    <string name="water_adding_shortcut">water adding shortcut</string>
    <string name="food_adding_shortcut">food adding shortcut</string>
    <string name="excercise_adding_shortcut">excercise adding shortcut</string>
    <string name="poids">Poids</string>
    <string name="eau">Eau</string>
    <string name="plats">Plat</string>
    <string name="excercices">Excercice</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_licitation">Félicitation!</string>
    <string name="votre_compte_est_configur_a_votre_objectif">Votre compte est configuré a votre objectif</string>
    <!-- <color name="deep_grey">#20262E</color>
    <color name="lemon_green">#00ff01</color> -->
</resources>