<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInActivity"
    android:background="@color/deep_grey">

    <TextView
        android:id="@+id/Bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/poppins"
        android:text="@string/bienvenue"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/EmailOrUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bienvenue"
        android:layout_alignStart="@+id/Bienvenue"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailOrUsername"
        android:layout_alignStart="@+id/Bienvenue"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignInBtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Password"
        android:layout_alignStart="@+id/Bienvenue"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/most_used_btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/RedirectionSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignInBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/vous_n_avez_pas_de_compte"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/or2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RedirectionSignup"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp" />

</RelativeLayout>