<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity"
    android:background="@color/deep_grey">

    <TextView
        android:id="@+id/CreeVotreCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/poppins"
        android:text="@string/Cree_votre_compte"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/EmailOrUsernameSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CreeVotreCompte"
        android:layout_alignStart="@+id/CreeVotreCompte"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/PasswordSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailOrUsernameSignUp"
        android:layout_alignStart="@+id/CreeVotreCompte"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordSignUp"
        android:layout_alignStart="@+id/CreeVotreCompte"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/confirmer_mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpBtn_2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_alignStart="@+id/CreeVotreCompte"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/most_used_btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/RedirectionSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignUpBtn_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/vous_avez_d_ja_un_compte"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/or1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RedirectionSignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        />

    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="475dp" />-->

</RelativeLayout>