<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_grey">


    <TextView
        android:id="@+id/progressBox1"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/progress_box_done"/>

    <TextView
        android:id="@+id/progressBox2"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/progressBox1"
        android:background="@drawable/progress_box_done" />

    <TextView
        android:id="@+id/progressBox3"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/progressBox2"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/progress_box"/>

    <TextView
        android:id="@+id/progressBox4"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/progressBox3"
        android:background="@drawable/progress_box" />

    <TextView
        android:id="@+id/progressBox5"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/progressBox4"
        android:background="@drawable/progress_box" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBox3"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/quel_est_votre_niveau_d_activit_de_base"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:dividerPadding="0dp">

        <RadioButton
            android:id="@+id/perdrepoids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="10dp"
            android:text="@string/pas_tr_s_actif"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_ou_2_journ_e_d_exercices_par_semaine"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="35dp"
            android:layout_marginTop="-12dp"/>

        <RadioButton
            android:id="@+id/maintenirpoids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="10dp"
            android:text="@string/actif"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_jours_d_exerices_par_semaine"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="35dp"
            android:layout_marginTop="-12dp"/>

        <RadioButton
            android:id="@+id/gagnerpoids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="10dp"
            android:text="@string/tr_s_actif"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_que_3_jours_d_exercices_par_semaine"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-12dp"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/page2btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/most_used_btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/suivant"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>