<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_grey">


    <TextView
        android:id="@+id/prePersoWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/bienvenue"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/prePersoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prePersoWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/prePersoText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Continuer_1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/prePersoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/most_used_btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/continuer"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>