<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_grey">

    <TextView
        android:id="@+id/felicitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/f_licitation"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/felicitationTxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/felicitation"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/votre_compte_est_configur_a_votre_objectif"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/page5btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/most_used_btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/continuer"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>